# daily-assistant

./: README.md  index.html  package.json  pnpm-lock.yaml
backend/: main.py
backend/agents/: root_agent.py  utils.py
frontend/: pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/components/: AIMessage.css  AIMessage.jsx  ChatInput.jsx  UserMessage.css  UserMessage.jsx
legacy/backend/: README.md  main.py  todos.json
legacy/backend/agents/: __init__.py  root_agent.py
legacy/frontend/: vite.config.js
legacy/frontend/src/: border.css
legacy/frontend/src/components/: AIMessage.css  AIMessage.jsx  ChatInput.css  ChatInput.jsx
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/agents/: mod.rs  root_agent.rs
src/components/: AIMessage.tsx  ChatInput.tsx  UserMessage.tsx
test/: test_cases.txt
